[package]
name = "exditorjs_native"
version = "0.1.0"
authors = []
edition = "2021"

[dependencies]
rustler = { version = "0.37.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

[lib]
name = "exditorjs_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[build.env]
passthrough = ["RUST_MIN_STACK"]